--- a/src/update3/org/cict/access/AssistantRegistrarOverride.fxml
+++ b/src/update3/org/cict/access/AssistantRegistrarOverride.fxml
@@ -8,22 +8,22 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="460.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="460.0" prefWidth="600.0" spacing="10.0" style="-fx-background-color: #0247FE;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="Access Local Registrar's Override" textFill="#f76c83">
+      <Label text="Access Local Registrar's Override" textFill="WHITE">
          <font>
             <Font size="30.0" />
          </font></Label>
       <VBox prefHeight="114.0" prefWidth="560.0">
          <children>
-            <Label text="The local registrar will recieve a 6 character One-Time Password (OTP) via text message to his/her registered mobile number with last 4 digits: " textFill="#f76c83" wrapText="true">
+            <Label text="The local registrar will recieve a 6 character One-Time Password (OTP) via text message to his/her registered mobile number with last 4 digits: " textFill="WHITE" wrapText="true">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
             <VBox alignment="CENTER">
                <children>
-                  <Label fx:id="lbl_mobile_number" text="Loading..." textFill="#f76c83">
+                  <Label fx:id="lbl_mobile_number" text="Loading..." textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
@@ -36,12 +36,12 @@
          <children>
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
-                  <Label text="Reference Number:" textFill="#f76c83" wrapText="true">
+                  <Label text="Reference Number:" textFill="WHITE" wrapText="true">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="lbl_ref_number" text="Loading..." textFill="#f76c83" wrapText="true">
+                  <Label fx:id="lbl_ref_number" text="Loading..." textFill="WHITE" wrapText="true">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
@@ -50,7 +50,7 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
-                  <Label text="Enter the OTP:" textFill="#f76c83" wrapText="true">
+                  <Label text="Enter the OTP:" textFill="WHITE" wrapText="true">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
@@ -63,19 +63,19 @@
                   <Insets top="10.0" />
                </VBox.margin>
                <children>
-                  <Label fx:id="lbl_resend" text="Didn't receive the message? Click here to resend." textAlignment="CENTER" textFill="#f76c83" wrapText="true">
+                  <Label fx:id="lbl_resend" text="Didn't receive the message? Click here to resend." textAlignment="CENTER" textFill="WHITE" wrapText="true">
                      <font>
                         <Font size="13.0" />
                      </font>
                   </Label>
                   <HBox alignment="CENTER" prefHeight="30.0" prefWidth="380.0" spacing="10.0">
                      <children>
-                        <JFXButton fx:id="btn_proceed" maxWidth="1.7976931348623157E308" prefHeight="39.0" prefWidth="165.0" style="-fx-border-color: #F76C83;" text="Proceed" textFill="#f76c83" HBox.hgrow="ALWAYS">
+                        <JFXButton fx:id="btn_proceed" maxWidth="1.7976931348623157E308" prefHeight="39.0" prefWidth="165.0" style="-fx-border-color: white;" text="Proceed" textFill="WHITE" HBox.hgrow="ALWAYS">
                            <font>
                               <Font size="15.0" />
                            </font>
                         </JFXButton>
-                        <JFXButton fx:id="btn_cancel" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" prefHeight="39.0" prefWidth="165.0" style="-fx-border-color: #F76C83;" text="Cancel" textFill="#f76c83" HBox.hgrow="ALWAYS">
+                        <JFXButton fx:id="btn_cancel" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" prefHeight="39.0" prefWidth="165.0" style="-fx-border-color: white;" text="Cancel" textFill="WHITE" HBox.hgrow="ALWAYS">
                            <font>
                               <Font size="15.0" />
                            </font>
@@ -92,7 +92,7 @@
       <VBox alignment="CENTER" />
       <VBox alignment="BOTTOM_CENTER" prefHeight="110.0" prefWidth="560.0">
          <children>
-            <Label prefHeight="57.0" prefWidth="560.0" text="Every request of a Local Registrar's Override, the system will provide unique OTPs. Please refer from the reference number." textAlignment="CENTER" textFill="#f76c83" wrapText="true">
+            <Label prefHeight="57.0" prefWidth="560.0" text="Every request of a Local Registrar's Override, the system will provide unique OTPs. Please refer from the reference number." textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
                   <Font size="14.0" />
                </font>
