--- a/src/update3/org/cict/access/ReEvaluationAccess.fxml
+++ b/src/update3/org/cict/access/ReEvaluationAccess.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="421.0" prefWidth="600.0" spacing="10.0" style="-fx-background-color: #F690A6;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="421.0" prefWidth="600.0" spacing="10.0" style="-fx-background-color: #F76C83;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox alignment="CENTER_LEFT" spacing="20.0">
          <children>
@@ -110,7 +110,10 @@
                   <Font size="15.0" />
                </font>
             </Label>
-            <TextField fx:id="txt_registrar_username" alignment="CENTER" prefWidth="200.0" />
+            <TextField fx:id="txt_registrar_username" alignment="CENTER" prefHeight="31.0" prefWidth="316.0">
+               <font>
+                  <Font size="15.0" />
+               </font></TextField>
          </children>
          <padding>
             <Insets left="20.0" />
@@ -128,7 +131,10 @@
                   <Font size="15.0" />
                </font>
             </Label>
-            <PasswordField fx:id="txt_pin" alignment="CENTER" prefWidth="200.0" />
+            <PasswordField fx:id="txt_pin" alignment="CENTER" prefHeight="31.0" prefWidth="316.0">
+               <font>
+                  <Font size="15.0" />
+               </font></PasswordField>
          </children>
          <padding>
             <Insets left="20.0" />
@@ -136,12 +142,12 @@
       </HBox>
       <HBox alignment="CENTER_LEFT" spacing="20.0">
          <children>
-            <JFXButton fx:id="btn_grant" prefWidth="90.0" style="-fx-border-color: #FFFFFF;" text="Grant" textFill="WHITE">
+            <JFXButton fx:id="btn_grant" prefHeight="33.0" prefWidth="153.0" style="-fx-border-color: #FFFFFF;" text="Grant" textFill="WHITE">
                <font>
                   <Font size="15.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="btn_cancel" prefWidth="90.0" style="-fx-border-color: #FFFFFF;" text="Cancel" textFill="WHITE">
+            <JFXButton fx:id="btn_cancel" prefHeight="33.0" prefWidth="140.0" style="-fx-border-color: #FFFFFF;" text="Cancel" textFill="WHITE">
                <font>
                   <Font size="15.0" />
                </font>
