--- a/src/update3/org/cict/access/TransactionPin.fxml
+++ b/src/update3/org/cict/access/TransactionPin.fxml
@@ -10,11 +10,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="application_root" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="193.0" prefWidth="437.0" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="193.0" prefWidth="437.0" spacing="10.0" style="-fx-background-color: #0387D1;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox prefHeight="64.0" prefWidth="417.0">
          <children>
-            <Label maxWidth="1.7976931348623157E308" prefHeight="47.0" prefWidth="228.0" text="Please enter your transaction pin and click Enter." textFill="#f76c83" wrapText="true" HBox.hgrow="ALWAYS">
+            <Label maxWidth="1.7976931348623157E308" prefHeight="47.0" prefWidth="228.0" text="Please enter your transaction pin for confirmation." textFill="WHITE" wrapText="true" HBox.hgrow="ALWAYS">
                <font>
                   <Font size="15.0" />
                </font>
@@ -31,7 +31,7 @@
          <children>
             <ImageView fitHeight="28.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/icons8-lock-filled-64.png" />
+                  <Image url="@images/pass.png" />
                </image>
             </ImageView>
             <PasswordField fx:id="txt_pin" prefHeight="28.0" prefWidth="324.0">
@@ -43,12 +43,12 @@
       </HBox>
       <HBox spacing="10.0">
          <children>
-            <JFXButton fx:id="btn_submit" prefHeight="32.0" prefWidth="355.0" style="-fx-background-color: #F76C83;" text="Submit" textFill="WHITE">
+            <JFXButton fx:id="btn_submit" prefHeight="32.0" prefWidth="355.0" style="-fx-border-color: white;" text="Submit" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="btn_close" prefHeight="32.0" prefWidth="355.0" style="-fx-background-color: #F76C83;" text="Cancel" textFill="WHITE">
+            <JFXButton fx:id="btn_close" prefHeight="32.0" prefWidth="355.0" style="-fx-border-color: white;" text="Cancel" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
