--- a/src/org/cict/reports/ReportsMain.fxml
+++ b/src/org/cict/reports/ReportsMain.fxml
@@ -379,14 +379,24 @@
                                     <Image url="@images/eval.png" />
                                  </image>
                               </ImageView>
-                              <Label maxWidth="1.7976931348623157E308" prefHeight="45.0" prefWidth="375.0" text="Print Logs" HBox.hgrow="ALWAYS">
+                              <Label maxWidth="1.7976931348623157E308" prefHeight="45.0" prefWidth="369.0" text="Print Logs" HBox.hgrow="ALWAYS">
                                  <font>
                                     <Font size="30.0" />
                                  </font>
                               </Label>
+                              <HBox alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="484.0" spacing="10.0">
+                                 <children>
+                                    <ComboBox fx:id="cmb_print_logs_faculty_search_vis1" prefHeight="37.0" prefWidth="98.0" promptText="Select" styleClass="metro-combo-box" />
+                                    <JFXTextField fx:id="txt_faculty_search_print_logs" focusColor="#f2f2f2" prefHeight="29.0" prefWidth="223.0" promptText="Search faculty here" style="-fx-text-fill: white;" unFocusColor="WHITE">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </JFXTextField>
+                                 </children>
+                              </HBox>
                            </children>
                         </HBox>
-                        <VBox prefHeight="107.0" prefWidth="874.0" spacing="10.0">
+                        <VBox prefHeight="84.0" prefWidth="914.0" spacing="10.0">
                            <children>
                               <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="10.0">
                                  <children>
@@ -403,16 +413,6 @@
                                           <Font size="16.0" />
                                        </font>
                                     </Label>
-                                 </children>
-                              </HBox>
-                              <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-                                 <children>
-                                    <ComboBox fx:id="cmb_print_logs_faculty_search_vis1" prefHeight="37.0" prefWidth="98.0" promptText="Select" styleClass="metro-combo-box" />
-                                    <JFXTextField fx:id="txt_faculty_search_print_logs" focusColor="#f2f2f2" prefHeight="29.0" prefWidth="223.0" promptText="Search faculty here" style="-fx-text-fill: white;" unFocusColor="WHITE">
-                                       <font>
-                                          <Font size="15.0" />
-                                       </font>
-                                    </JFXTextField>
                                  </children>
                               </HBox>
                               <HBox alignment="CENTER_LEFT" prefHeight="28.0" prefWidth="790.0" spacing="10.0">
@@ -437,6 +437,11 @@
                                           <ComboBox fx:id="cmb_to_print_logs" prefHeight="33.0" prefWidth="159.0" promptText="No Date Available" styleClass="metro-combo-box" />
                                        </children>
                                     </HBox>
+                                    <ComboBox fx:id="cmb_print_logs_type" prefHeight="37.0" prefWidth="136.0" promptText="Select" styleClass="metro-combo-box">
+                                       <HBox.margin>
+                                          <Insets left="20.0" />
+                                       </HBox.margin>
+                                    </ComboBox>
                                     <HBox alignment="CENTER_RIGHT" prefHeight="33.0" prefWidth="117.0" spacing="10.0" HBox.hgrow="ALWAYS">
                                        <children>
                                           <JFXButton fx:id="btn_filter_print_logs" prefHeight="33.0" prefWidth="182.0" style="-fx-border-color: #fff; -fx-background-color: #1BA261;" text="Filter" textFill="WHITE">
