--- a/src/sys/org/cict/layout/home/SystemHome.fxml
+++ b/src/sys/org/cict/layout/home/SystemHome.fxml
@@ -66,9 +66,9 @@
       </HBox>
       <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
          <children>
-            <VBox prefHeight="200.0" prefWidth="300.0" spacing="10.0">
+            <VBox prefHeight="526.0" prefWidth="300.0" spacing="10.0">
                <HBox.margin>
-                  <Insets bottom="20.0" top="20.0" />
+                  <Insets bottom="10.0" top="20.0" />
                </HBox.margin>
                <padding>
                   <Insets left="20.0" />
@@ -254,10 +254,13 @@
                            </children>
                         </HBox>
                      </children>
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin>
                   </VBox>
-                  <VBox spacing="8.0">
+                  <VBox prefHeight="88.0" prefWidth="280.0" spacing="8.0">
                      <children>
-                        <HBox alignment="CENTER_LEFT" prefWidth="280.0">
+                        <HBox alignment="CENTER_LEFT" prefHeight="52.0" prefWidth="280.0">
                            <children>
                               <Label graphicTextGap="10.0" prefWidth="120.0" text="Access">
                                  <font>
@@ -274,18 +277,18 @@
                                     <Insets right="10.0" />
                                  </padding>
                               </Label>
-                              <Label fx:id="lbl_access" graphicTextGap="10.0" text="Local Registrar">
+                              <Label fx:id="lbl_access" graphicTextGap="10.0" prefHeight="66.0" prefWidth="164.0" text="Assistant Administrator" wrapText="true">
                                  <font>
                                     <Font name="System Bold" size="15.0" />
                                  </font>
                               </Label>
                            </children>
                         </HBox>
-                        <HBox alignment="CENTER_LEFT" prefWidth="280.0" visible="false">
+                        <HBox alignment="CENTER_LEFT" prefHeight="0.0" prefWidth="280.0" visible="false">
                            <children>
-                              <Label graphicTextGap="10.0" prefWidth="120.0" text="Post">
+                              <Label graphicTextGap="10.0" prefHeight="55.0" prefWidth="120.0" text="Post">
                                  <font>
-                                    <Font size="15.0" />
+                                    <Font size="1.0" />
                                  </font>
                                  <graphic>
                                     <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
@@ -300,35 +303,15 @@
                               </Label>
                               <Label fx:id="lbl_desgination" graphicTextGap="10.0" text="Local Registrar">
                                  <font>
-                                    <Font name="System Bold" size="15.0" />
+                                    <Font size="1.0" />
                                  </font>
                               </Label>
                            </children>
                         </HBox>
                      </children>
-                     <padding>
-                        <Insets top="10.0" />
-                     </padding>
                   </VBox>
-                  <VBox spacing="8.0">
+                  <VBox prefHeight="131.0" prefWidth="280.0" spacing="8.0">
                      <children>
-                        <HBox prefWidth="280.0">
-                           <children>
-                              <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@images/user_info/Idea_64px.png" />
-                                 </image>
-                                 <HBox.margin>
-                                    <Insets right="10.0" />
-                                 </HBox.margin>
-                              </ImageView>
-                              <Label graphicTextGap="10.0" text="If you have corrections regarding your information listed above please visit the Local MIS Office of CICT" textAlignment="JUSTIFY" wrapText="true">
-                                 <padding>
-                                    <Insets right="10.0" />
-                                 </padding>
-                              </Label>
-                           </children>
-                        </HBox>
                         <HBox prefWidth="280.0">
                            <children>
                               <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
@@ -346,6 +329,11 @@
                               </Label>
                            </children>
                         </HBox>
+                        <Label fx:id="lbl_current_term" alignment="CENTER" graphicTextGap="10.0" prefHeight="49.0" prefWidth="280.0" text="AY 2017 - 2018 FIRST SEMESTER" textAlignment="CENTER" wrapText="true">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </Label>
                      </children>
                      <padding>
                         <Insets top="10.0" />
