--- a/src/org/cict/evaluation/student/history/History.fxml
+++ b/src/org/cict/evaluation/student/history/History.fxml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="927.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="927.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox prefHeight="95.0" prefWidth="927.0" style="-fx-border-color: #000;" VBox.vgrow="ALWAYS">
          <children>
@@ -28,7 +29,7 @@
             </VBox>
             <VBox alignment="CENTER" prefHeight="50.0" prefWidth="339.0" HBox.hgrow="ALWAYS">
                <children>
-                  <Label alignment="CENTER" text="EVALUATION HISTORY">
+                  <Label fx:id="lbl_title" alignment="CENTER" text="STUDENT EVALUATION HISTORY">
                      <font>
                         <Font name="System Bold" size="35.0" />
                      </font>
@@ -64,28 +65,36 @@
             <Insets left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
       </HBox>
-      <VBox alignment="CENTER_LEFT" />
       <VBox prefHeight="540.0" prefWidth="927.0" VBox.vgrow="ALWAYS">
          <children>
-            <JFXTreeTableView fx:id="tblEvaluation" focusTraversable="false" prefHeight="601.0" prefWidth="907.0" style="-fx-border-color: #000;" stylesheets="@src/css/table.css" VBox.vgrow="ALWAYS">
+            <StackPane fx:id="stack_view" prefHeight="534.0" prefWidth="907.0" VBox.vgrow="ALWAYS">
                <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
-            </JFXTreeTableView>
+               <children>
+                  <JFXTreeTableView fx:id="tblEvaluation" focusTraversable="false" prefHeight="601.0" prefWidth="907.0" style="-fx-border-color: #000;" stylesheets="@src/css/table.css" />
+                  <VBox fx:id="vbox_table_history" prefHeight="200.0" prefWidth="100.0" />
+               </children>
+            </StackPane>
             <VBox alignment="CENTER_RIGHT" VBox.vgrow="ALWAYS">
                <children>
-                  <HBox alignment="CENTER_RIGHT" spacing="10.0">
+                  <HBox alignment="CENTER_RIGHT" prefHeight="52.0" prefWidth="917.0" spacing="10.0">
                      <children>
-                        <Button fx:id="btn_print" mnemonicParsing="false" prefHeight="36.0" prefWidth="126.0" stylesheets="@src/css/button.css" text="Print History" textFill="WHITE">
+                        <JFXButton fx:id="btn_info_history" layoutX="669.0" layoutY="10.0" prefHeight="53.0" prefWidth="234.0" style="-fx-border-color: black;" text="Student Information History">
                            <font>
                               <Font size="15.0" />
                            </font>
-                        </Button>
-                        <Button fx:id="btnBack" mnemonicParsing="false" prefHeight="36.0" prefWidth="126.0" stylesheets="@src/css/button.css" text="Close" textFill="WHITE">
+                        </JFXButton>
+                        <JFXButton fx:id="btn_print" prefHeight="53.0" prefWidth="170.0" style="-fx-border-color: black;" text="Print History">
                            <font>
                               <Font size="15.0" />
                            </font>
-                        </Button>
+                        </JFXButton>
+                        <JFXButton fx:id="btnBack" layoutX="707.0" layoutY="12.0" prefHeight="53.0" prefWidth="132.0" style="-fx-border-color: black;" text="Close">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </JFXButton>
                      </children>
                   </HBox>
                </children>
