--- a/src/org/cict/reports/ReportsMain.fxml
+++ b/src/org/cict/reports/ReportsMain.fxml
@@ -306,7 +306,7 @@
                         <Insets left="20.0" />
                      </padding>
                   </VBox>
-                  <VBox fx:id="vbox_pres_main" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0">
+                  <VBox fx:id="vbox_pres_main" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0" visible="false">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="10.0">
                            <children>
@@ -392,7 +392,7 @@
                         <Insets left="20.0" />
                      </padding>
                   </VBox>
-                  <VBox fx:id="vbox_print_logs_main" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0" visible="false">
+                  <VBox fx:id="vbox_print_logs_main" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="10.0">
                            <children>
@@ -401,13 +401,23 @@
                                     <Image url="@images/eval.png" />
                                  </image>
                               </ImageView>
-                              <Label maxWidth="1.7976931348623157E308" prefHeight="45.0" prefWidth="369.0" text="Print Logs" HBox.hgrow="ALWAYS">
+                              <Label maxWidth="1.7976931348623157E308" prefHeight="45.0" prefWidth="319.0" text="Print Logs" HBox.hgrow="ALWAYS">
                                  <font>
                                     <Font size="30.0" />
                                  </font>
                               </Label>
-                              <HBox alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="484.0" spacing="10.0">
+                              <HBox alignment="CENTER_RIGHT" prefHeight="45.0" prefWidth="691.0" spacing="10.0">
                                  <children>
+                                    <Label text="Module:">
+                                       <font>
+                                          <Font size="16.0" />
+                                       </font>
+                                    </Label>
+                                    <ComboBox fx:id="cmb_module" prefHeight="29.0" prefWidth="153.0" promptText="Select" styleClass="metro-combo-box">
+                                       <HBox.margin>
+                                          <Insets right="20.0" />
+                                       </HBox.margin>
+                                    </ComboBox>
                                     <ComboBox fx:id="cmb_print_logs_faculty_search_vis1" prefHeight="37.0" prefWidth="98.0" promptText="Select" styleClass="metro-combo-box" />
                                     <JFXTextField fx:id="txt_faculty_search_print_logs" focusColor="#f2f2f2" prefHeight="29.0" prefWidth="223.0" promptText="Search faculty here" style="-fx-text-fill: white;" unFocusColor="WHITE">
                                        <font>
