updated system name

--- a/src/sys/org/cict/layout/home/SystemLogin.fxml
+++ b/src/sys/org/cict/layout/home/SystemLogin.fxml
@@ -50,7 +50,7 @@
                         <Font name="Courier New" size="17.0" />
                      </font>
                   </Label>
-                  <Label text="Enrollment Evaluation Management System">
+                  <Label text="Student Evaluation System">
                      <font>
                         <Font name="Courier New" size="17.0" />
                      </font>
